[gd_scene load_steps=7 format=3 uid="uid://by5y8enupftnx"]

[ext_resource type="Script" uid="uid://cle5hvqf8o70q" path="res://entitys/objects/level camera/level_camera.gd" id="1_kmdna"]
[ext_resource type="Script" uid="uid://vjnmfe78ngdr" path="res://entitys/objects/level camera/activate.gd" id="2_4jdcx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmdna"]
size = Vector2(20, 289)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jdcx"]
size = Vector2(55, 229)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7apuv"]
size = Vector2(543, 221.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5crrs"]
size = Vector2(132, 245)

[node name="level camera" type="Camera2D"]
zoom = Vector2(2.025, 2.025)
script = ExtResource("2_4jdcx")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-137, 17)
shape = SubResource("RectangleShape2D_kmdna")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(10, -2)
script = ExtResource("1_kmdna")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(27, 2.5)
shape = SubResource("RectangleShape2D_4jdcx")

[node name="Activate" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Activate"]
position = Vector2(-53.5, 1)
shape = SubResource("RectangleShape2D_7apuv")

[node name="delete" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="delete"]
position = Vector2(-232, 2)
shape = SubResource("RectangleShape2D_5crrs")

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="body_entered" from="Activate" to="." method="_on_activate_body_entered"]
[connection signal="body_exited" from="Activate" to="." method="_on_activate_body_exited"]
[connection signal="body_entered" from="delete" to="." method="_on_delete_body_entered"]
